@@ -15,6 +15,9 @@ rsync changes since last release
     * The rsync:// syntax for daemon connections is now accepted in the
       destination field.
 
+    * If the file name given to --include-from or --exclude-from is "-",
+      rsync will read from standard input. (J.W. Schultz)
+
   BUG FIXES:
   
     * Fix "forward name lookup failed" errors on AIX 4.3.3.  (John
